--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,3 +6,4 @@ layout: default
   <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
 </div>
+<a href="https://github.com/leighhutchens/leighhutchens.github.io/blob/main/{{ page.path }}">Edit this page.</a>
